--- a/web/packages/realtor/css/src/page_types/properties.scss
+++ b/web/packages/realtor/css/src/page_types/properties.scss
@@ -60,6 +60,7 @@ body.pg-properties div#c-level-1 {
                         }
                     }
                 }
+                h3 { padding: 0 10px; }
             }
         }
     }
@@ -164,7 +165,9 @@ body.pg-properties div#c-level-1 {
                             }
                         }
                         @media screen and (max-width:$screen-sm) {
-                            .node-image, .node-content { width: 100%;height: 50%;float: left;max-width: 100%;
+                            .node-image { height: 430px; }
+                            .node-content { height: calc(100% - 430px); }
+                            .node-image, .node-content { width: 100%;float: left;max-width: 100%;
                                 h3 { margin-top: 20px; }
                             }
                         }
@@ -184,6 +187,9 @@ body.pg-properties div#c-level-1 {
 
 @media screen and (max-width:$screen-sm) {
     div.divider-line { border-width: 2px !important; }
+    section.sub-areas { height: 1060px !important;
+        .masthead .node { height: 100%; }
+    }
 }
 
 @media screen and (max-width:$screen-xs) {
